git-commit-update

--- a/Cakes.html
+++ b/Cakes.html
@@ -1,1 +1,6 @@
-<a href="index.html"><h2>Main Home Page</h2></a>
+<!DOCTYPE html>
+<html lang="en">
+
+    <a href="index.html"><img src="images/socialmedia/html6.png" alt="Home Page"></a>
+
+</html>
